--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li><a href="./galeri.html">Galeri</a></li>
 					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
 					<!-- <li><a href="./info-acara.html">Info Acara</a></li> -->
-					<li><a href="./daftar-pangkat">Daftar Pangkat</a></li>
+					<li><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
 					<li><a href="./kontak.html">Para Pengurus</a></li>
 				</ul>
 		</header>
