--- a/admin-info/dapi.html
+++ b/admin-info/dapi.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <link href="/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
@@ -137,33 +138,33 @@ width: 90px
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
           <h3>Total : 27</h3>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/0.png" alt="0" /><span class="tooltiptext">Adventure: Carnival - 2014</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/257.png" alt="257" /><span class="tooltiptext">Adventure: Chaostmas - 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/131.png" alt="131" /><span class="tooltiptext">Adventure: Dragon - 2016 • 2017</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/261.png" alt="261" /><span class="tooltiptext">Adventure: 	Valentine's Day - 2020</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/7.png" alt="7" /><span class="tooltiptext">Adventure: Easter - 2014 • 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/264.png" alt="264" /><span class="tooltiptext">Adventure: Saint Patrick's Day - 2020</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/267.png" alt="267" /><span class="tooltiptext">Adventure: Easter - 2020</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/269.png" alt="269" /><span class="tooltiptext">Obtaining: Wearing the Mustache on the Village</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/142.png" alt="142" /><span class="tooltiptext">Adventure: Saint Patrick's Day - 2016 • 2017 • 2018 • 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/16.png" alt="16" /><span class="tooltiptext">Adventure: Fishing - 2014 • 2015 • 2018</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/145.png" alt="145" /><span class="tooltiptext">NPC: Oracle</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/17.png" alt="17" /><span class="tooltiptext">Adventure: Fishing - 2014 • 2015 • Pirate 2016 • 2017 • Indiana Mouse</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/147.png" alt="147" /><span class="tooltiptext">NPC: Buffy</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/212.png" alt="212" /><span class="tooltiptext">Fur: Lion</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/28.png" alt="28" /><span class="tooltiptext">Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/29.png" alt="29" /><span class="tooltiptext">Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/30.png" alt="30" /><span class="tooltiptext">Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/33.png" alt="33" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2017 • 2018 • Oracle</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/34.png" alt="34" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2016 • 2017 • 2018</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/35.png" alt="35" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2015 • 2016 • 2017 • 2018</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/230.png" alt="230" /><span class="tooltiptext">Adventure: Valentine's Day - 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/42.png" alt="42" /><span class="tooltiptext">Obtaining: Obtained by logging into Transformice on Steam</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/174.png" alt="174" /><span class="tooltiptext">Adventure: Christmas - 2016 • 2017 • 2018</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/47.png" alt="47" /><span class="tooltiptext">Adventure: Easter - 2015</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/53.png" alt="53" /><span class="tooltiptext">Fur: Tails</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/55.png" alt="55" /><span class="tooltiptext">Obtaining: you could obtain it by connecting your "Run for Cheese" account to your Atelier801 account</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/124.png" alt="124" /><span class="tooltiptext">Obtaining: Play 1,500 rounds of Racing</span></div>
+          <img src="https://cheese.formice.com/img/badges/0.png" alt="0" data-toggle="tooltip" data-placement="top" title="Adventure: Carnival - 2014" />
+          <img src="https://cheese.formice.com/img/badges/257.png" alt="257" data-toggle="tooltip" data-placement="top" title="Adventure: Chaostmas - 2019" />
+          <img src="https://cheese.formice.com/img/badges/131.png" alt="131" data-toggle="tooltip" data-placement="top" title="Adventure: Dragon - 2016 • 2017" />
+          <img src="https://cheese.formice.com/img/badges/261.png" alt="261" data-toggle="tooltip" data-placement="top" title="Adventure: 	Valentine's Day - 2020" />
+          <img src="https://cheese.formice.com/img/badges/7.png" alt="7" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2014 • 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019" />
+          <img src="https://cheese.formice.com/img/badges/264.png" alt="264" data-toggle="tooltip" data-placement="top" title="Adventure: Saint Patrick's Day - 2020" />
+          <img src="https://cheese.formice.com/img/badges/267.png" alt="267" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2020" />
+          <img src="https://cheese.formice.com/img/badges/269.png" alt="269" data-toggle="tooltip" data-placement="top" title="Obtaining: Wearing the Mustache on the Village" />
+          <img src="https://cheese.formice.com/img/badges/142.png" alt="142" data-toggle="tooltip" data-placement="top" title="Adventure: Saint Patrick's Day - 2016 • 2017 • 2018 • 2019" />
+          <img src="https://cheese.formice.com/img/badges/16.png" alt="16" data-toggle="tooltip" data-placement="top" title="Adventure: Fishing - 2014 • 2015 • 2018" />
+          <img src="https://cheese.formice.com/img/badges/145.png" alt="145" data-toggle="tooltip" data-placement="top" title="NPC: Oracle" />
+          <img src="https://cheese.formice.com/img/badges/17.png" alt="17" data-toggle="tooltip" data-placement="top" title="Adventure: Fishing - 2014 • 2015 • Pirate 2016 • 2017 • Indiana Mouse" />
+          <img src="https://cheese.formice.com/img/badges/147.png" alt="147" data-toggle="tooltip" data-placement="top" title="NPC: Buffy" />
+          <img src="https://cheese.formice.com/img/badges/212.png" alt="212" data-toggle="tooltip" data-placement="top" title="Fur: Lion" />
+          <img src="https://cheese.formice.com/img/badges/28.png" alt="28" data-toggle="tooltip" data-placement="top" title="Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019" />
+          <img src="https://cheese.formice.com/img/badges/29.png" alt="29" data-toggle="tooltip" data-placement="top" title="Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019" />
+          <img src="https://cheese.formice.com/img/badges/30.png" alt="30" data-toggle="tooltip" data-placement="top" title="Adventure: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019" />
+          <img src="https://cheese.formice.com/img/badges/33.png" alt="33" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2014 • 2017 • 2018 • Oracle" />
+          <img src="https://cheese.formice.com/img/badges/34.png" alt="34" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2014 • 2016 • 2017 • 2018" />
+          <img src="https://cheese.formice.com/img/badges/35.png" alt="35" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2014 • 2015 • 2016 • 2017 • 2018" />
+          <img src="https://cheese.formice.com/img/badges/230.png" alt="230" data-toggle="tooltip" data-placement="top" title="Adventure: Valentine's Day - 2019" />
+          <img src="https://cheese.formice.com/img/badges/42.png" alt="42" data-toggle="tooltip" data-placement="top" title="Obtaining: Obtained by Logging into Transformice on Steam" />
+          <img src="https://cheese.formice.com/img/badges/174.png" alt="174" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2016 • 2017 • 2018" />
+          <img src="https://cheese.formice.com/img/badges/47.png" alt="47" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2015" />
+          <img src="https://cheese.formice.com/img/badges/53.png" alt="53" data-toggle="tooltip" data-placement="top" title="Fur: Tails" />
+          <img src="https://cheese.formice.com/img/badges/55.png" alt="55" data-toggle="tooltip" data-placement="top" title="you could obtain it by connecting your 'Run for Cheese' account to your Atelier801 account" />
+          <img src="https://cheese.formice.com/img/badges/124.png" alt="124" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,500 Rounds of Racing" />
           <hr>
         </div>
       </div>
@@ -172,28 +173,28 @@ width: 90px
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
         <div class="w3-container">
             <h3>Total : 11</h3>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126
-            " alt="Macaron_14" /><span class="tooltiptext">Default cartouche if no skill points are allocated</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
-            " alt="Macaron_14" /><span class="tooltiptext">Mistletoe</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/6a/Macaron_5.png/revision/latest?cb=20160108142040
-            " alt="Macaron_14" /><span class="tooltiptext">Crown</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/3/3c/Macaron_9.png/revision/latest?cb=20160205134128
-            " alt="Macaron_14" /><span class="tooltiptext">Blue dragon</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633
-            " alt="Macaron_14" /><span class="tooltiptext">Lucky</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/84/Macaron_15.png/revision/latest?cb=20160312151712
-            " alt="Macaron_14" /><span class="tooltiptext">Culinary components</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/d/d0/Macaron_16.png/revision/latest?cb=20160324195213
-            " alt="Macaron_14" /><span class="tooltiptext">Shaman wing, beads, and ornaments</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/9/91/Macaron_20.png/revision/latest?cb=20160415225903
-            " alt="Macaron_14" /><span class="tooltiptext">Dinosaur fossils & egg</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/c1/Macaron_21.png/revision/latest?cb=20160430012120
-            " alt="Macaron_14" /><span class="tooltiptext">Party</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_24.png/revision/latest?cb=20180223183816
-            " alt="Macaron_14" /><span class="tooltiptext">Pirate</span></div>
-            <div class="tooltip"><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cd/Macaron_28.png/revision/latest?cb=20180223183928
-            " alt="Macaron_14" /><span class="tooltiptext">Witch</span></div>
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Default cartouche if no skill points are allocated" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Mistletoe" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/6a/Macaron_5.png/revision/latest?cb=20160108142040
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Crown" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/3/3c/Macaron_9.png/revision/latest?cb=20160205134128
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Blue dragon" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Lucky" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/84/Macaron_15.png/revision/latest?cb=20160312151712
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Culinary components" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/d/d0/Macaron_16.png/revision/latest?cb=20160324195213
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Shaman wing, beads, and ornaments" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/9/91/Macaron_20.png/revision/latest?cb=20160415225903
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Dinosaur fossils & egg" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/c1/Macaron_21.png/revision/latest?cb=20160430012120
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Party" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_24.png/revision/latest?cb=20180223183816
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Pirate" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cd/Macaron_28.png/revision/latest?cb=20180223183928
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Witch" />
           <hr>
         </div>
       </div>
