--- a/kontak.html
+++ b/kontak.html
@@ -51,12 +51,12 @@
 					<img src="img/event/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
-					<li><a href="./index.html">Profil Miawu</a></li>
-					<li><a href="./galeri.html">Galeri</a></li>
-					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
-					<!-- <li><a href="./info-acara.html">Info Acara</a></li> -->
-					<li><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
-					<li class="active"><a href="./kontak.html">Para Pengurus</a></li>
+					<li><a href="/index">Profil Miawu</a></li>
+					<li><a href="/galeri">Galeri</a></li>
+					<li><a href="/daftar-acara">Daftar Acara</a></li>
+					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
+					<li><a href="/daftar-pangkat">Daftar Pangkat</a></li>
+					<li class="active"><a href="/kontak">Para Pengurus</a></li>
 				</ul>
 			</div>
 		</header>
