--- a/admin-info/dapi.html
+++ b/admin-info/dapi.html
@@ -138,7 +138,7 @@ width: 90px
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
           <h3>Total : 27</h3>
-          <img src="https://cheese.formice.com/img/badges/0.png" alt="0" data-toggle="tooltip" data-placement="top" title="Adventure: Carnival - 2014" />
+          <center><img src="https://cheese.formice.com/img/badges/0.png" alt="0" data-toggle="tooltip" data-placement="top" title="Adventure: Carnival - 2014" />
           <img src="https://cheese.formice.com/img/badges/257.png" alt="257" data-toggle="tooltip" data-placement="top" title="Adventure: Chaostmas - 2019" />
           <img src="https://cheese.formice.com/img/badges/131.png" alt="131" data-toggle="tooltip" data-placement="top" title="Adventure: Dragon - 2016 • 2017" />
           <img src="https://cheese.formice.com/img/badges/261.png" alt="261" data-toggle="tooltip" data-placement="top" title="Adventure: 	Valentine's Day - 2020" />
@@ -164,7 +164,7 @@ width: 90px
           <img src="https://cheese.formice.com/img/badges/47.png" alt="47" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2015" />
           <img src="https://cheese.formice.com/img/badges/53.png" alt="53" data-toggle="tooltip" data-placement="top" title="Fur: Tails" />
           <img src="https://cheese.formice.com/img/badges/55.png" alt="55" data-toggle="tooltip" data-placement="top" title="you could obtain it by connecting your 'Run for Cheese' account to your Atelier801 account" />
-          <img src="https://cheese.formice.com/img/badges/124.png" alt="124" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,500 Rounds of Racing" />
+          <img src="https://cheese.formice.com/img/badges/124.png" alt="124" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,500 Rounds of Racing" /></center>
           <hr>
         </div>
       </div>
@@ -173,7 +173,7 @@ width: 90px
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
         <div class="w3-container">
             <h3>Total : 11</h3>
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126
+            <center><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126
             " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Default cartouche if no skill points are allocated" />
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
             " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Mistletoe" />
@@ -194,7 +194,7 @@ width: 90px
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_24.png/revision/latest?cb=20180223183816
             " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Pirate" />
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cd/Macaron_28.png/revision/latest?cb=20180223183928
-            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Witch" />
+            " alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Witch" /></center>
           <hr>
         </div>
       </div>
