--- a/admin-info/aslam.html
+++ b/admin-info/aslam.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <link href="/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
@@ -99,17 +100,18 @@ width:90px}
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
           <h3>Total : 11</h3>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/272.png" alt="272" /><span class="tooltiptext">Adventure: Hugging 2020</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/129.png" alt="129" /><span class="tooltiptext">Adventure: Hugging 2016 • 2017</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/209.png" alt="209" /><span class="tooltiptext">Adventure: Fishing 2018</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/18.png" alt="18" /><span class="tooltiptext">Events: Fishing 2014 • 2015 • 2016 • 2017 • 2018</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/276.png" alt="276" /><span class="tooltiptext">Adventure: Fishing 2020</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/9.png" alt="9" /><span class="tooltiptext">Obtaining: Transformice 4th Anniversary Enigma</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/73.png" alt="73" /><span class="tooltiptext">Adventure: Piloting 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/42.png" alt="42" /><span class="tooltiptext">Obtaining: Transformice on Steam</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/28.png" alt="28" /><span class="tooltiptext">Events: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/124.png" alt="124" /><span class="tooltiptext">Obtaining: Play 1,500 rounds of Racing.</span></div>
-          <div class="tooltip"><img src="https://cheese.formice.com/img/badges/237.png" alt="237" /><span class="tooltiptext">Fur: Kingfisher</span></div>
+          <center><img src="https://cheese.formice.com/img/badges/272.png" alt="272" data-toggle="tooltip" data-placement="top" title="Adventure: Hugging 2020" />
+          <img src="https://cheese.formice.com/img/badges/129.png" alt="129" data-toggle="tooltip" data-placement="top" title="Adventure: Hugging 2016 • 2017" />
+          <img src="https://cheese.formice.com/img/badges/209.png" alt="209" data-toggle="tooltip" data-placement="top" title="Adventure: Fishing 2018" />
+          <img src="https://cheese.formice.com/img/badges/18.png" alt="18" data-toggle="tooltip" data-placement="top" title="Events: Fishing 2014 • 2015 • 2016 • 2017 • 2018" />
+          <img src="https://cheese.formice.com/img/badges/276.png" alt="276" data-toggle="tooltip" data-placement="top" title="Adventure: Fishing 2020" />
+          <img src="https://cheese.formice.com/img/badges/9.png" alt="9" data-toggle="tooltip" data-placement="top" title="Obtaining: Transformice 4th Anniversary Enigma" />
+          <img src="https://cheese.formice.com/img/badges/73.png" alt="73" data-toggle="tooltip" data-placement="top" title="Adventure: Piloting 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019" />
+          <img src="https://cheese.formice.com/img/badges/42.png" alt="42" data-toggle="tooltip" data-placement="top" title="Obtaining: Transformice on Steam" />
+          <img src="https://cheese.formice.com/img/badges/28.png" alt="28" data-toggle="tooltip" data-placement="top" title="Events: Halloween - 2014 • 2015 • 2016 • 2017 • 2018 • 2019" />
+          <img src="https://cheese.formice.com/img/badges/237.png" alt="237" data-toggle="tooltip" data-placement="top" title="Fur: Kingfisher" />
+          <img src="https://cheese.formice.com/img/badges/124.png" alt="124" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,500 rounds of Racing" />
+          </center>
           <hr>
         </div>
       </div>
@@ -118,24 +120,24 @@ width:90px}
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
         <div class="w3-container">
             <h3>Total : 9</h3>
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/7/7a/Macaron_1.png/revision/latest?cb=20160406021503
-            " alt="Macaron_1" />
-            <img width="50" height="55" src="https://vignette.wikia.nocookie.net/transformice/images/9/9e/Macaron_2.png/revision/latest?cb=20160406021512
-            " alt="Macaron_2" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
-            " alt="Macaron_4" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/6a/Macaron_5.png/revision/latest?cb=20160108142040
-            " alt="Macaron_5" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/2/29/Macaron_7.png/revision/latest?cb=20160116080426
-            " alt="Macaron_7" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/3/3c/Macaron_9.png/revision/latest?cb=20160205134128
-            " alt="Macaron_9" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633
-            " alt="Macaron_014" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/84/Macaron_15.png/revision/latest?cb=20160312151712
-            " alt="Macaron_15" />
-            <img width="80" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/f/fa/Macaron_25.png/revision/latest?cb=20160610193121
-            " alt="Macaron_25" />
+            <center><img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/7/7a/Macaron_1.png/revision/latest?cb=20160406021603
+            " alt="Macaron_1" data-toggle="tooltip" data-placement="top" title="Jingle's hat" />
+            <img width="60" height="70" src="https://vignette.wikia.nocookie.net/transformice/images/9/9e/Macaron_2.png/revision/latest?cb=20160406021512
+            " alt="Macaron_2" data-toggle="tooltip" data-placement="top" title="Ski gear" />
+            <img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106
+            " alt="Macaron_4" data-toggle="tooltip" data-placement="top" title="Mistletoe" />
+            <img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/6/6a/Macaron_5.png/revision/latest?cb=20160108142040
+            " alt="Macaron_5" data-toggle="tooltip" data-placement="top" title="Crown" />
+            <img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/2/29/Macaron_7.png/revision/latest?cb=20160116080426
+            " alt="Macaron_7" data-toggle="tooltip" data-placement="top" title="Land of dreams" />
+            <img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/3/3c/Macaron_9.png/revision/latest?cb=20160205134128
+            " alt="Macaron_9" data-toggle="tooltip" data-placement="top" title="Blue dragon" />
+            <img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633
+            " alt="Macaron_014" data-toggle="tooltip" data-placement="top" title="Lucky" />
+            <img width="60" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/8/84/Macaron_15.png/revision/latest?cb=20160312151712
+            " alt="Macaron_15" data-toggle="tooltip" data-placement="top" title="Culinary components" />
+            <img width="90" height="60" src="https://vignette.wikia.nocookie.net/transformice/images/f/fa/Macaron_25.png/revision/latest?cb=20160610193121
+            " alt="Macaron_25" data-toggle="tooltip" data-placement="top" title="Planet" /></center>
           <hr>
         </div>
       </div>
