--- a/admin-info/brendod.html
+++ b/admin-info/brendod.html
@@ -92,7 +92,7 @@ width:90px}
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
             <h3>Total : 58</h3>
-            <img src="https://cheese.formice.com/img/badges/0.png" alt="0" data-toggle="tooltip" data-placement="top" title="Adventure: Carnival - 2014" />
+            <center><img src="https://cheese.formice.com/img/badges/0.png" alt="0" data-toggle="tooltip" data-placement="top" title="Adventure: Carnival - 2014" />
             <img src="https://cheese.formice.com/img/badges/1.png" alt="1" data-toggle="tooltip" data-placement="top" title="Adventure: Carnival - 2014" />
             <img src="https://cheese.formice.com/img/badges/257.png" alt="272" data-toggle="tooltip" data-placement="top" title="Adventure: Chaostmas 2019" />
             <img src="https://cheese.formice.com/img/badges/129.png" alt="129" data-toggle="tooltip" data-placement="top" title="Adventure: Hugging 2016 • 2017" />
@@ -149,7 +149,7 @@ width:90px}
             <img src="https://cheese.formice.com/img/badges/236.png" alt="236" data-toggle="tooltip" data-placement="top" title="Fur: Alligator" />
             <img src="https://cheese.formice.com/img/badges/240.png" alt="240" data-toggle="tooltip" data-placement="top" title="Adventure: Vegetable Garden - 2019" />
             <img src="https://cheese.formice.com/img/badges/124.png" alt="124" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,500 rounds of Racing" />
-            <img src="https://cheese.formice.com/img/badges/255.png" alt="255" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2019" />
+            <img src="https://cheese.formice.com/img/badges/255.png" alt="255" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2019" /></center>
           <hr>
         </div>
       </div>
@@ -158,7 +158,7 @@ width:90px}
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
         <div class="w3-container">
             <h3>Total : 17</h3>
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126" alt="Macaron_0" data-toggle="tooltip" data-placement="top" title="Default cartouche if no skill points are allocated." />
+            <center><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/6/61/Macaron_0.png/revision/latest?cb=20160101203126" alt="Macaron_0" data-toggle="tooltip" data-placement="top" title="Default cartouche if no skill points are allocated." />
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/8/86/Macaron_4.png/revision/latest?cb=20160101203106" alt="Macaron_4" data-toggle="tooltip" data-placement="top" title="Mistletoe" />
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/2/29/Macaron_7.png/revision/latest?cb=20160116080426
             " alt="Macaron_7" data-toggle="tooltip" data-placement="top" title="Land of dreams" />
@@ -189,7 +189,7 @@ width:90px}
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cf/Macaron_45.png/revision/latest?cb=20200215004118
             " alt="Macaron_45" data-toggle="tooltip" data-placement="top" title="Wizard hood" />
             <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/4/40/Macaron_46.png/revision/latest?cb=20200215004104
-            " alt="Macaron_46" data-toggle="tooltip" data-placement="top" title="Teddy bear" />
+            " alt="Macaron_46" data-toggle="tooltip" data-placement="top" title="Teddy bear" /></center>
           <hr>
         </div>
       </div>
