--- a/admin-info/mia.html
+++ b/admin-info/mia.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <link href="/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
@@ -92,28 +93,28 @@ width:90px
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Badges</h2>
         <div class="w3-container">
             <h3>Total : 22</h3>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/193.png" alt="193" /><span class="tooltiptext">Adventure: Christmas 2016 • 2017 • 2018</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/161.png" alt="161" /><span class="tooltiptext">Adventure: Vegetable Garden - 2016 • 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/34.png" alt="34" /><span class="tooltiptext">Adventure: Christmas - 2014 • 2016 • 2017 • 2018</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/163.png" alt="163" /><span class="tooltiptext">Adventure: Vegetable Garden - 2016 • 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/38.png" alt="38" /><span class="tooltiptext">Fur: Calico cat</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/6.png" alt="6" /><span class="tooltiptext">Adventure: Easter - 2014 • 2016 • Indiana Mouse</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/7.png" alt="7" /><span class="tooltiptext">Adventure: Easter - 2014 • 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/9.png" alt="9" /><span class="tooltiptext">Obtaining: Transformice 4th Anniversary Enigma</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/73.png" alt="73" /><span class="tooltiptext">Adventure: Piloting 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/202.png" alt="202" /><span class="tooltiptext">Adventure: Saint Patrick's Day - 2018 • 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/42.png" alt="42" /><span class="tooltiptext">Obtaining: Obtained by logging into Transformice on Steam</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/267.png" alt="267" /><span class="tooltiptext">Adventure: Easter - 2020</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/142.png" alt="142" /><span class="tooltiptext">Adventure: Saint Patrick's Day - 2016 • 2017 • 2018 • 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/46.png" alt="46" /><span class="tooltiptext">Events: Easter - 2015 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/240.png" alt="240" /><span class="tooltiptext">Adventure: Vegetable Garden - 2019</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/272.png" alt="272" /><span class="tooltiptext">Adventure: Hugging - 2020</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/145.png" alt="145" /><span class="tooltiptext">NPC: Oracle</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/242.png" alt="242" /><span class="tooltiptext">Fur: Chinchilla</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/276.png" alt="276" /><span class="tooltiptext">Adventure: Fishing - 2020</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/277.png" alt="277" /><span class="tooltiptext">Fur: Kitsune</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/120.png" alt="120" /><span class="tooltiptext">Obtaining: Play 1,000 rounds of Survivor</span></div>
-            <div class="tooltip"><img src="https://cheese.formice.com/img/badges/124.png" alt="124" /><span class="tooltiptext">Obtaining: Play 1,500 rounds of Racing</span></div>
+            <center><img src="https://cheese.formice.com/img/badges/193.png" alt="193" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas 2016 • 2017 • 2018" />
+            <img src="https://cheese.formice.com/img/badges/161.png" alt="161" data-toggle="tooltip" data-placement="top" title="Adventure: Vegetable Garden - 2016 • 2019" />
+            <img src="https://cheese.formice.com/img/badges/34.png" alt="34" data-toggle="tooltip" data-placement="top" title="Adventure: Christmas - 2014 • 2016 • 2017 • 2018" />
+            <img src="https://cheese.formice.com/img/badges/163.png" alt="163" data-toggle="tooltip" data-placement="top" title="Adventure: Vegetable Garden - 2016 • 2019" />
+            <img src="https://cheese.formice.com/img/badges/38.png" alt="38" data-toggle="tooltip" data-placement="top" title="Fur: Calico cat" />
+            <img src="https://cheese.formice.com/img/badges/6.png" alt="6" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2014 • 2016 • Indiana Mouse" />
+            <img src="https://cheese.formice.com/img/badges/7.png" alt="7" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2014 • 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019" />
+            <img src="https://cheese.formice.com/img/badges/9.png" alt="9" data-toggle="tooltip" data-placement="top" title="Obtaining: Transformice 4th Anniversary Enigma" />
+            <img src="https://cheese.formice.com/img/badges/73.png" alt="73" data-toggle="tooltip" data-placement="top" title="Adventure: Piloting 2016 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019" />
+            <img src="https://cheese.formice.com/img/badges/202.png" alt="202" data-toggle="tooltip" data-placement="top" title="Adventure: Saint Patrick's Day - 2018 • 2019" />
+            <img src="https://cheese.formice.com/img/badges/42.png" alt="42" data-toggle="tooltip" data-placement="top" title="Obtaining: Obtained by logging into Transformice on Steam" />
+            <img src="https://cheese.formice.com/img/badges/267.png" alt="267" data-toggle="tooltip" data-placement="top" title="Adventure: Easter - 2020" />
+            <img src="https://cheese.formice.com/img/badges/142.png" alt="142" data-toggle="tooltip" data-placement="top" title="Adventure: Saint Patrick's Day - 2016 • 2017 • 2018 • 2019" />
+            <img src="https://cheese.formice.com/img/badges/46.png" alt="46" data-toggle="tooltip" data-placement="top" title="Events: Easter - 2015 • Saint Patrick's Day 2018 • Saint Patrick's Day 2019" />
+            <img src="https://cheese.formice.com/img/badges/240.png" alt="240" data-toggle="tooltip" data-placement="top" title="Adventure: Vegetable Garden - 2019" />
+            <img src="https://cheese.formice.com/img/badges/272.png" alt="272" data-toggle="tooltip" data-placement="top" title="Adventure: Hugging - 2020" />
+            <img src="https://cheese.formice.com/img/badges/145.png" alt="145" data-toggle="tooltip" data-placement="top" title="NPC: Oracle" />
+            <img src="https://cheese.formice.com/img/badges/242.png" alt="242" data-toggle="tooltip" data-placement="top" title="Fur: Chinchilla" />
+            <img src="https://cheese.formice.com/img/badges/276.png" alt="276" data-toggle="tooltip" data-placement="top" title="Adventure: Fishing - 2020" />
+            <img src="https://cheese.formice.com/img/badges/277.png" alt="277" data-toggle="tooltip" data-placement="top" title="Fur: Kitsune" />
+            <img src="https://cheese.formice.com/img/badges/120.png" alt="120" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,000 rounds of Survivor" />
+            <img src="https://cheese.formice.com/img/badges/124.png" alt="124" data-toggle="tooltip" data-placement="top" title="Obtaining: Play 1,500 rounds of Racing" /></center>
           <hr>
         </div>
       </div>
@@ -122,14 +123,14 @@ width:90px
         <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-award fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Cartouches</h2>
         <div class="w3-container">
             <h3>Total : 8</h3>
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633" alt="Macaron_14" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/d/d0/Macaron_16.png/revision/latest?cb=20160324195213" alt="Macaron_16" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/c1/Macaron_21.png/revision/latest?cb=20160430012120" alt="Macaron_21" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/5/5b/Macaron_26.png/revision/latest?cb=20160818131734" alt="Macaron_26" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cd/Macaron_28.png/revision/latest?cb=20180223183928" alt="Macaron_28" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/5/54/Macaron_32.png/revision/latest?cb=20171230021004" alt="Macaron_32" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/5/50/Macaron_41.png/revision/latest?cb=20190906011348" alt="Macaron_41" />
-            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/9/99/Macaron_42.png/revision/latest?cb=20190906011425" alt="Macaron_42" />
+            <center><img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/a/a1/Macaron_14.png/revision/latest?cb=20160311144633" alt="Macaron_14" data-toggle="tooltip" data-placement="top" title="Lucky" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/d/d0/Macaron_16.png/revision/latest?cb=20160324195213" alt="Macaron_16" data-toggle="tooltip" data-placement="top" title="Shaman wing, beads, and ornaments" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/c1/Macaron_21.png/revision/latest?cb=20160430012120" alt="Macaron_21" data-toggle="tooltip" data-placement="top" title="Party" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/5/5b/Macaron_26.png/revision/latest?cb=20160818131734" alt="Macaron_26" data-toggle="tooltip" data-placement="top" title="Farmer hat" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/c/cd/Macaron_28.png/revision/latest?cb=20180223183928" alt="Macaron_28" data-toggle="tooltip" data-placement="top" title="Witch" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/5/54/Macaron_32.png/revision/latest?cb=20171230021004" alt="Macaron_32" data-toggle="tooltip" data-placement="top" title="Christmas tree" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/5/50/Macaron_41.png/revision/latest?cb=20190906011348" alt="Macaron_41" data-toggle="tooltip" data-placement="top" title="Saint Patrick's Day" />
+            <img width="50" height="50" src="https://vignette.wikia.nocookie.net/transformice/images/9/99/Macaron_42.png/revision/latest?cb=20190906011425" alt="Macaron_42" data-toggle="tooltip" data-placement="top" title="Easter egg" /></center>
           <hr>
         </div>
       </div>
