--- a/kontak.html
+++ b/kontak.html
@@ -72,7 +72,7 @@
 			  <img width="170" height="180" src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/mia.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/mia.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/mia" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -85,7 +85,7 @@
 			  <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/brendod.png"/>
                 <div class="actions">
                 	<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/brendod.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/brendod" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
 			    <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/ruru.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/ruru.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/ruru" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
 			  <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/minek.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/minek.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/minek" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -124,7 +124,7 @@
 			    <img width="180" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/alice.png"/>
                 <div class="actions">
                 	<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/alice.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/alice" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -137,7 +137,7 @@
 			    <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/aslam.png"/>
                 <div class="actions">
                 	<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/aslam.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/aslam" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -150,7 +150,7 @@
 			    <img width="185" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/wilson.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-                	<a href="https://miawuu.github.io/admin-info/wilson.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+                	<a href="https://miawuu.github.io/admin-info/wilson" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -163,7 +163,7 @@
 			    <img width="170" height="200" src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/dapi.png"/>
                 <div class="actions">
 					<h3><font color="#beb9b9">????</h3></font>
-					<a href="https://miawuu.github.io/admin-info/dapi.html" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
+					<a href="https://miawuu.github.io/admin-info/dapi" target="_blank"><i class="fa fa-arrow-right fa-3x" aria-hidden="true"></i></a>
 				</div>
             </div>
         </div><br>
