--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -59,6 +59,7 @@
 					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
 					<li class="active"><a href="/daftar-pangkat">Daftar Pangkat</a></li>
 					<li><a href="/kontak">Para Pengurus</a></li>
+					<li><a href="/transformice" target="_blank">Play TFM</a></li>
 				</ul>
 			</div>
 		</header>
