--- a/galeri.html
+++ b/galeri.html
@@ -58,6 +58,7 @@
 					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
 					<li><a href="/daftar-pangkat">Daftar Pangkat</a></li>
 					<li><a href="/kontak">Para Pengurus</a></li>
+					<li><a href="/transformice" target="_blank">Play TFM</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -169,7 +170,8 @@
 				</div>
 			</div>
 		</div>
-		<br><br><br><br><h2>Carousel</h2><br>
+		<br><br><br><br>
+		<h2>Carousel</h2><br>
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-item">
