--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
 					<li><a href="/daftar-pangkat">Daftar Pangkat</a></li>
 					<li><a href="/kontak">Para Pengurus</a></li>
+					<li><a href="/transformice" target="_blank">Play TFM</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
