--- a/kontak.html
+++ b/kontak.html
@@ -57,6 +57,7 @@
 					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
 					<li><a href="/daftar-pangkat">Daftar Pangkat</a></li>
 					<li class="active"><a href="/kontak">Para Pengurus</a></li>
+					<li><a href="/transformice" target="_blank">Play TFM</a></li>
 				</ul>
 			</div>
 		</header>
