--- a/admin.html
+++ b/admin.html
@@ -56,7 +56,7 @@
 					<li><a href="/daftar-acara">Daftar Acara</a></li>
 					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
 					<li><a href="/daftar-pangkat">Daftar Pangkat</a></li>
-					<li class="active"><a href="/kontak">Admin</a></li>
+					<li class="active"><a href="/admin">Admin</a></li>
 				</ul>
 			</div>
 		</header>
