--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<li><a href="/daftar-acara">Daftar Acara</a></li>
 					<!-- <li><a href="./info-acara">Info Acara</a></li> -->
 					<li><a href="/daftar-pangkat">Daftar Pangkat</a></li>
-					<li><a href="/kontak">Admin</a></li>
+					<li><a href="/admin">Admin</a></li>
 				</ul>
 		</header>
 		<!-- header section end -->
@@ -64,17 +64,18 @@
 			<div class="gallery-single-warp">
 				<div class="row">
 					<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank">
-						<img src="img/event/miawu-removed.png" alt="Miawu">
+						<center><img width="400" height="350" src="img/event/miawu-removed.png" alt="Miawu"></center>
 					</a>
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
 							<span>Miawu Profile Info</span>
 							<ul>
-								<li><span>Name</span>Miawu</li>
+								<li><span>Nama</span>Miawu</li>
 								<li><span>ID</span>1147896</li>
-								<li><span>Region</span>Indonesia (ID/IDN)</li>
-								<li><span>Date</span>09/04/2020</li>
-								<li><span>Member</span>140</li>
+								<li><span>Negara</span>Indonesia (ID/IDN)</li>
+								<li><span>Registrasi</span>09/04/2020</li>
+								<li><span>Anggota</span>140</li>
+								<a href="https://discord.gg/brH3NUc" target="_blank">.</a>
 							</ul>
 						</div>
 					</div>
