--- a/galeri.html
+++ b/galeri.html
@@ -27,9 +27,9 @@
 </head>
 <body>
 	<!-- Page Preloder -->
-	<div id="preloder">
+	<!-- <div id="preloder">
 		<div class="loader"></div>
-	</div>
+	</div> -->
 
 	<!-- Top right elements -->
 	<div class="spacial-controls">
