--- a/daftar-acara.html
+++ b/daftar-acara.html
@@ -38,10 +38,10 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html">Profil</a></li>
-				<li><a href="galeri.html">Galeri</a></li>
-				<li><a href="daftar-acara.html" class="active">Daftar Acara</a></li>
-				<li><a href="kontak.html">Kontak</a></li>
+				<li><a href="index">Profil</a></li>
+				<li><a href="galeri">Galeri</a></li>
+				<li><a href="daftar-acara" class="active">Daftar Acara</a></li>
+				<li><a href="kontak">Kontak</a></li>
 			</ul>
 		</nav>
 	</div>
