--- a/galeri.html
+++ b/galeri.html
@@ -45,10 +45,10 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html">Profil</a></li>
-				<li><a href="galeri.html" class="active">Galeri</a></li>
-				<li><a href="daftar-acara.html">Daftar Acara</a></li>
-				<li><a href="kontak.html">Kontak</a></li>
+				<li><a href="index">Profil</a></li>
+				<li><a href="galeri" class="active">Galeri</a></li>
+				<li><a href="daftar-acara">Daftar Acara</a></li>
+				<li><a href="kontak">Kontak</a></li>
 			</ul>
 		</nav>
 	</div>
