--- a/kontak.html
+++ b/kontak.html
@@ -37,10 +37,10 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html">Profil</a></li>
-				<li><a href="galeri.html">Galeri</a></li>
-				<li><a href="daftar-acara.html">Daftar Acara</a></li>
-				<li><a href="kontak.html" class="active">Kontak</a></li>
+				<li><a href="index">Profil</a></li>
+				<li><a href="galeri">Galeri</a></li>
+				<li><a href="daftar-acara">Daftar Acara</a></li>
+				<li><a href="kontak" class="active">Kontak</a></li>
 			</ul>
 		</nav>
 	</div>
