--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html" class="active">Profil</a></li>
-				<li><a href="galeri.html">Galeri</a></li>
-				<li><a href="daftar-acara.html">Daftar Acara</a></li>
-				<li><a href="kontak.html">Kontak</a></li>
+				<li><a href="index" class="active">Profil</a></li>
+				<li><a href="galeri">Galeri</a></li>
+				<li><a href="daftar-acara">Daftar Acara</a></li>
+				<li><a href="kontak">Kontak</a></li>
 			</ul>
 		</nav>
 	</div>
