--- a/acara-info/17-an.html
+++ b/acara-info/17-an.html
@@ -38,10 +38,10 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="../index.html">Profil</a></li>
-				<li><a href="../galeri.html">Galeri</a></li>
-				<li><a href="../daftar-acara.html">Daftar Acara</a></li>
-				<li><a href="../kontak.html">Kontak</a></li>
+				<li><a href="../index">Profil</a></li>
+				<li><a href="../galeri">Galeri</a></li>
+				<li><a href="../daftar-acara">Daftar Acara</a></li>
+				<li><a href="../kontak">Kontak</a></li>
 			</ul>
 		</nav>
 		</div>
@@ -113,7 +113,7 @@
 							<div class="blog-item rp-item set-bg" data-setbg="https://cdn.discordapp.com/attachments/707427305701507092/746232840500281404/emot16tfm.png">
 								<div class="bi-text">
 									<div class="bi-date">10 Juli, 2020</div>
-									<h3><a href="./first-event.html">First Event</a></h3>
+									<h3><a href="./first-event">First Event</a></h3>
 								</div>
 							</div>
 						</div>
