--- a/acara-info/first-event.html
+++ b/acara-info/first-event.html
@@ -38,10 +38,10 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="../index.html">Profil</a></li>
-				<li><a href="../galeri.html">Galeri</a></li>
-				<li><a href="../daftar-acara.html">Daftar Acara</a></li>
-				<li><a href="../kontak.html">Kontak</a></li>
+				<li><a href="../index">Profil</a></li>
+				<li><a href="../galeri">Galeri</a></li>
+				<li><a href="../daftar-acara">Daftar Acara</a></li>
+				<li><a href="../kontak">Kontak</a></li>
 			</ul>
 		</nav>
 		</div>
@@ -97,7 +97,7 @@
 							<div class="blog-item rp-item set-bg" data-setbg="https://cdn.discordapp.com/attachments/707427305701507092/746232805306007622/emot15tfm.png">
 								<div class="bi-text">
 									<div class="bi-date">16 Agustus, 2020</div>
-									<h3><a href="./17-an.html">17-an</a></h3>
+									<h3><a href="./17-an">17-an</a></h3>
 								</div>
 							</div>
 						</div>
