--- a/daftar-acara.html
+++ b/daftar-acara.html
@@ -57,7 +57,7 @@
 						<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232840500281404/emot16tfm.png" alt="">
 						<div class="bi-text">
 							<div class="bi-date">10 Juli 2020</div>
-							<h3><a href="/acara-info/first-event.html">First Event</a></h3>
+							<h3><a href="/acara-info/first-event">First Event</a></h3>
 						</div>
 					</div>
 				</div>
@@ -66,7 +66,7 @@
 						<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232805306007622/emot15tfm.png" alt="">
 						<div class="bi-text">
 							<div class="bi-date">16 Agustus 2020</div>
-							<h3><a href="/acara-info/17-an.html">17-an</a></h3>
+							<h3><a href="/acara-info/17-an">17-an</a></h3>
 						</div>
 					</div>
 				</div>
