--- a/acara-info/17-an.html
+++ b/acara-info/17-an.html
@@ -53,12 +53,12 @@
 		<div class="container">
 			<div class="single-blog-page">
 				<div class="blog-metas">
-					<div class="blog-meta">16 Agustus, 2020</div>
+					<center><div class="blog-meta">16 Agustus, 2020</div></center>
 				</div>
-				<h2>17-an</h2>
-				<div class="blog-thumb">
+				<center><h2>17-an</h2></center>
+				<center><div class="blog-thumb">
 					<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232805306007622/emot15tfm.png" alt="Emote_15_tfm">
-				</div>
+				</div></center>
 				<p>Diadakan-nya Acara ini adalah untuk memperingati Hari Kemerdekaan RI (17 Agustus), juga Memper-Erat Ikatan Pertemanan dari seluruh Anggota Miawu, Kenapa hanya seluruh Anggota Miawu?, Ya, karena ini Local Event, Acara kecil-kecilan yang hanya bisa diikuti oleh Anggota Miawu Saja. nah apa saja sih Lomba-lomba yang diadakan?<br><br>
                 Lomba-lomba-nya Antara lain: Menggambar dengan Surat ber-tema Kemerdekaan, Fashion Show ber-Penampilan ala Kemerdekaan, Uno, Racing, Circuit, Tanya Jawab, Basket, dan Cerdas Cermat.</p><br><br>
                 <hr color="black">
