--- a/acara-info/first-event.html
+++ b/acara-info/first-event.html
@@ -53,12 +53,12 @@
 		<div class="container">
 			<div class="single-blog-page">
 				<div class="blog-metas">
-					<div class="blog-meta">10 Juli, 2020</div>
+					<center><div class="blog-meta">10 Juli, 2020</div></center>
 				</div>
-				<h2>First Event</h2>
-				<div class="blog-thumb">
+				<center><h2>First Event</h2></center>
+				<center><div class="blog-thumb">
 					<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232840500281404/emot16tfm.png" alt="Emote_16_tfm">
-				</div>
+				</div></center>
 				<p>Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing.</p><br><br>
 				<hr color="black">
 				<h5>Kumpulan Foto Acara:</h5>
