--- a/daftar-acara.html
+++ b/daftar-acara.html
@@ -34,7 +34,7 @@
 		<div class="sm-header">
 			<div class="menu-close">
 				<i class="ti-arrow-left"></i>
-			</div>>
+			</div>
 		</div>
 		<nav class="main-menu">
 			<ul>
