--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
 			<div class="about-right">
 				<div class="about-text">
 					<h2>Miawu Profil Info</h2>
-					<h5>Hy Jametz</h5>
+					<h5>Nama: <font color="white">???</font>Miawu</h5>
+					<h5>ID: <font color="white">????....?</font>1147896</h5>
+					<h5>Negara: <font color="white">??</font>Indonesia (ID/IDN)</h5>
+					<h5>Anggota: <font color="white">/</font>152</h5>
+					<h5>Didirikan: <font color="white">.</font>09/04/2020</h5>
+					<p>Status Rekrutmen Terbuka.</p>
 				</div>
 			</div>
 		</div>
