--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>Miawu</title>
+	<title>Miawu - Admin</title>
 	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 	<meta charset="UTF-8">
 	<meta name="description" content="Miawu">
@@ -40,7 +40,7 @@
 				<li><a href="index">Profil</a></li>
 				<li><a href="galeri">Galeri</a></li>
 				<li><a href="daftar-acara">Daftar Acara</a></li>
-				<li><a href="kontak" class="active">Kontak</a></li>
+				<li><a href="admin" class="active">Admin</a></li>
 			</ul>
 		</nav>
 	</div>
