--- a/daftar-acara.html
+++ b/daftar-acara.html
@@ -41,7 +41,7 @@
 				<li><a href="index">Profil</a></li>
 				<li><a href="galeri">Galeri</a></li>
 				<li><a href="daftar-acara" class="active">Daftar Acara</a></li>
-				<li><a href="kontak">Kontak</a></li>
+				<li><a href="admin">Admin</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -51,6 +51,7 @@
 	<section class="blog-section">
 		<div class="nice-scroll">
 			<div class="blog-grid-warp">
+				<center><h2><font color="white">.</h2></center></font>
 				<div class="blog-grid-sizer"></div>
 				<div class="blog-grid">
 					<div class="blog-item">
