--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<li><a href="index" class="active">Profil</a></li>
 				<li><a href="galeri">Galeri</a></li>
 				<li><a href="daftar-acara">Daftar Acara</a></li>
-				<li><a href="kontak">Kontak</a></li>
+				<li><a href="admin">Admin</a></li>
 			</ul>
 		</nav>
 	</div>
