--- a/galeri.html
+++ b/galeri.html
@@ -48,7 +48,7 @@
 				<li><a href="index">Profil</a></li>
 				<li><a href="galeri" class="active">Galeri</a></li>
 				<li><a href="daftar-acara">Daftar Acara</a></li>
-				<li><a href="kontak">Kontak</a></li>
+				<li><a href="admin">Admin</a></li>
 			</ul>
 		</nav>
 	</div>
