--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>Miawu</title>
+	<title>Miawu - Profil</title>
 	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 	<meta charset="UTF-8">
 	<meta name="description" content="Miawu">
