--- a/admin.html
+++ b/admin.html
@@ -54,7 +54,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/576915512098029578/4af8212573b250e73a9e48ae1b8655f7.webp?size=128" alt="">
-							<h4>Miak</h4>
+							<h4>Mia26#0000</h4>
 						</div>
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/598819826982715393/75667f3a2f683df3e24b1e78c56f5aa2.png?size=128" alt="">
-							<h4>Brendod</h4>
+							<h4>Spieky#0000</h4>
 						</div>
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/525287599112454144/ac824eee88dfacbf0b703bfb13805e86.png?size=128" alt="">
-							<h4>Ruru</h4>
+							<h4>Ruru#1623</h4>
 						</div>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/663049629209985036/43fcd7157decf3fc403200518215b0ac.png?size=128" alt="">
-							<h4>Minek</h4>
+							<h4>Jasminevza#0451</h4>
 						</div>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/417526069240004608/25166235241ae884c191a9fc7321dc9b.png?size=128" alt="">
-							<h4>Alice</h4>
+							<h4>Alicekwkland#0000</h4>
 						</div>
 					</div>
 				</div>
@@ -94,7 +94,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/561412873742712855/e25dd46be94f91348969ccb95e6f402c.png?size=128" alt="">
-							<h4>Aslam</h4>
+							<h4>Aslaaaam#0000</h4>
 						</div>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/330231306137108480/6a6bc5b7419d35834dec7e7ed8ff1f4c.png?size=128" alt="">
-							<h4>Wilson</h4>
+							<h4>Verox1#0000</h4>
 						</div>
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 					<div class="pa-text">
 						<div class="pa-author">
 							<img src="https://cdn.discordapp.com/avatars/415466692064313344/e54750c32ca6623afbfb52667f48bca3.png?size=128" alt="">
-							<h4>Dapi</h4>
+							<h4>Reighpuy#1257</h4>
 						</div>
 					</div>
 				</div>
