Fix Screen Display

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 		<div class="about-warp">
 			<div class="about-left">
 				<div class="about-img">
-					<img width="200" height="200" src="img/event/miawu-logo.png" alt="">
+					<img width="500" height="200" src="img/event/miawu-logo.png" alt="">
 				</div>
 			</div>
-			<div class="about-right">
+			<div class="about-bottom">
 				<div class="about-text">
-					<h2>Miawu Profil Info</h2>
+					</center><h3>Miawu Profil Info</h3></center><br>
 					<h5>Nama: <font color="white">???</font>Miawu</h5>
 					<h5>ID: <font color="white">????....?</font>1147896</h5>
 					<h5>Negara: <font color="white">??</font>Indonesia (ID/IDN)</h5>
