--- a/admin.html
+++ b/admin.html
@@ -41,6 +41,7 @@
 				<li><a href="galeri">Galeri</a></li>
 				<li><a href="daftar-acara">Daftar Acara</a></li>
 				<li><a href="admin" class="active">Admin</a></li>
+				<li><a href="hy">HY</a></li>
 			</ul>
 		</nav>
 	</div>
