--- a/hy.html
+++ b/hy.html
@@ -1,29 +1,27 @@
 <html lang="en">
 <head>
-	<title>Miawu - Daftar Acara</title>
+	<title>Miawu - HY</title>
 	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 	<meta charset="UTF-8">
 	<meta name="description" content="Miawu">
-	<meta name="keywords" content="photo, html">
+	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/themify-icons.css"/>
 	<link rel="stylesheet" href="css/accordion.css"/>
-	<link rel="stylesheet" href="css/fresco.css"/>
 	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
-
+	<link rel="stylesheet" href="css/hy.css"/>
 </head>
 <body>
-	<!-- Page Preloder -->
-	<div id="preloder">
+    <!-- Page Preloder -->
+	<!-- <div id="preloder">
 		<div class="loader"></div>
-	</div>
-
+    </div> -->
+    
 	<!-- Offcanvas Menu Section -->
 	<div class="menu-wrapper">
 		<div class="menu-switch">
@@ -40,44 +38,23 @@
 			<ul>
 				<li><a href="index">Profil</a></li>
 				<li><a href="galeri">Galeri</a></li>
-				<li><a href="daftar-acara" class="active">Daftar Acara</a></li>
-				<li><a href="admin">Admin</a></li>
-				<li><a href="hy">HY</a></li>
+				<li><a href="daftar-acara">Daftar Acara</a></li>
+                <li><a href="admin">Admin</a></li>
+                <li><a href="hy" class="active">HY</a></li>
 			</ul>
 		</nav>
 	</div>
 	<!-- Offcanvas Menu Section end -->
 
-	<!-- Blog Section end -->
-	<section class="blog-section">
-		<div class="nice-scroll">
-			<div class="blog-grid-warp">
-				<center><h2><font color="white">.</h2></center></font>
-				<div class="blog-grid-sizer"></div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232840500281404/emot16tfm.png" alt="">
-						<div class="bi-text">
-							<div class="bi-date">10 Juli 2020</div>
-							<h3><a href="/acara-info/first-event">First Event</a></h3>
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid">
-					<div class="blog-item">
-						<img src="https://cdn.discordapp.com/attachments/707427305701507092/746232805306007622/emot15tfm.png" alt="">
-						<div class="bi-text">
-							<div class="bi-date">16 Agustus 2020</div>
-							<h3><a href="/acara-info/17-an">17-an</a></h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Blog Section end -->
+    <div class="canvas">
+        <div class="cat"><h1><font face="cooper">This Web is <br>Maintained by <br>~Jamet</font></h1></div>
+        <div class="cloud"></div>
+        <div class="cloud cloud--2"></div>
+        <div class="cloud cloud--3"></div>
+    </div>
+    <center><h3><font face="cooper">Nyan Cat </font><font face="algerian">by</font><font face="cooper"> Akshay</h3></center></font>
 
-	<!--====== Javascripts & Jquery ======-->
+    <!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
@@ -87,5 +64,6 @@
 	<script src="js/circle-progress.min.js"></script>
 	<script src="js/pana-accordion.js"></script>
 	<script src="js/main.js"></script>
-	</body>
+    
+</body>
 </html>
