--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 	<meta charset="UTF-8">
 	<meta name="description" content="Miawu">
-	<meta name="keywords" content="photo, html">
+	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -41,6 +41,7 @@
 				<li><a href="galeri">Galeri</a></li>
 				<li><a href="daftar-acara">Daftar Acara</a></li>
 				<li><a href="admin">Admin</a></li>
+				<li><a href="hy">HY</a></li>
 			</ul>
 		</nav>
 	</div>
