--- a/hy.html
+++ b/hy.html
@@ -47,12 +47,13 @@
 	<!-- Offcanvas Menu Section end -->
 
     <div class="canvas">
-        <div class="cat"><h1><font face="cooper">This Web is <br>Maintained by <br>~Jamet</font></h1></div>
+		<!-- <div class="cat"><h1><font face="cooper">This Web is <br>Maintained by <br>~Jamet</font></h1></div> -->
+		<div class="cat"><h5><font face="cooper">This Web is Maintained <br>by ~Jamet</font></h5></div>
         <div class="cloud"></div>
         <div class="cloud cloud--2"></div>
-        <div class="cloud cloud--3"></div>
+		<div class="cloud cloud--3"></div>
     </div>
-    <center><h3><font face="cooper">Nyan Cat </font><font face="algerian">by</font><font face="cooper"> Akshay</h3></center></font>
+    <center><h5><font face="cooper">Nyan Cat </font><font face="algerian">by</font><font face="cooper"> Akshay</h5></center></font>
 
     <!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
