--- a/galeri.html
+++ b/galeri.html
@@ -49,6 +49,7 @@
 				<li><a href="galeri" class="active">Galeri</a></li>
 				<li><a href="daftar-acara">Daftar Acara</a></li>
 				<li><a href="admin">Admin</a></li>
+				<li><a href="hy">HY</a></li>
 			</ul>
 		</nav>
 	</div>
