Updated Admin Page

--- a/acara-info/17-an.html
+++ b/acara-info/17-an.html
@@ -41,7 +41,7 @@
 				<li><a href="../index">Profil</a></li>
 				<li><a href="../galeri">Galeri</a></li>
 				<li><a href="../daftar-acara">Daftar Acara</a></li>
-				<li><a href="../kontak">Kontak</a></li>
+				<li><a href="../admin">Kontak</a></li>
 				<li><a href="../hy">HY</a></li>
 			</ul>
 		</nav>
