--- a/acara-info/first-event.html
+++ b/acara-info/first-event.html
@@ -41,7 +41,7 @@
 				<li><a href="../index">Profil</a></li>
 				<li><a href="../galeri">Galeri</a></li>
 				<li><a href="../daftar-acara">Daftar Acara</a></li>
-				<li><a href="../kontak">Kontak</a></li>
+				<li><a href="../admin">Kontak</a></li>
 				<li><a href="../hy">HY</a></li>
 			</ul>
 		</nav>
